# PALWORLD-SERVER-MANAGER

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: extract_i18n.py  translate_i18n.py
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  gen_icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: access_control.rs  backup.rs  compatibility.rs  config.rs  discord.rs  discord_bot.rs  installation.rs  mod.rs  rcon.rs  scheduler.rs  server.rs  startup.rs  system.rs  workshop.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/services/: backup_service.rs  config_generator.rs  discord_bot.rs  ini_parser.rs  installation_manager.rs  log_watcher.rs  mod.rs  network.rs  palworld_rest_api.rs  process_manager.rs  rcon.rs  scheduler.rs  steamcmd.rs  system_analyzer.rs  update_manager.rs
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/tabs/: BackupsTab.tsx  ConfigEditor.tsx  DiscordTab.tsx  FirewallTab.tsx  LogsTab.tsx  ModsTab.tsx  PlayersTab.tsx  RconConsole.tsx  SchedulerTab.tsx
src/components/ui/: BackgroundSlideshow.tsx  CustomSelect.tsx  DonationAlert.tsx  Notification.tsx  PerformanceChart.tsx  RunningPal.tsx  ServerUpdatePopup.tsx  SponsorBanner.tsx  UpdateOverlay.tsx
src/components/views/: CreateServer.tsx  Dashboard.tsx  ServerDetail.tsx  SettingsView.tsx
src/lib/: i18n.ts  palDatabase.ts  tauri.ts
src/stores/: useAppStore.ts
src/styles/: globals.css
