[package]
name = "palworld-server-manager"
version = "1.5.0"
description = "Palworld Server Manager - Professional Dedicated Server Management"
authors = ["Sanjay"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "palworld_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"

tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
ini = "1.3"
sysinfo = "0.38.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.13.4", features = ["stream", "json", "blocking"] }
zip = "8.6.0"
bytes = "1"
cron = "0.17.0"
walkdir = "2"
notify = "8.2.0"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22.1"
futures-util = "0.3"
local-ip-address = "0.6.13"
lazy_static = "1.4"
sha2 = "0.11.0"
hex = "0.4"
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Shell", "Win32_Storage_FileSystem"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
